# Dead-Project-LackOfTime

./: CMakeLists.txt  README.md  SDL_Tower.cbp  SDL_Tower.depend  SDL_Tower.layout  main
.github/: FUNDING.yml
.github/workflows/: codeql.yml
include/: GameManager.h  Graphics.h  MathHelper.h  Timer.h
include/Entities/: GameEntity.h  Texture.h
src/: CMakeLists.txt  GameEntity.cpp  GameManager.cpp  Graphics.cpp  Timer.cpp  main.cpp
src/Entities/: CMakeLists.txt  GameEntity.cpp  Texture.cpp
